--- a/api-guides/RESERVAS/routes_private_reservas_ReservarEvento.yaml
+++ b/api-guides/RESERVAS/routes_private_reservas_ReservarEvento.yaml
@@ -37,35 +37,35 @@ components:
           description: Monto pagado al momento de crear la reserva.
           example: 150.00
 
-    ReservationCreateResponse:
+    StandardResponse:
       type: object
       properties:
         message:
           type: string
-          example: Reserva creada exitosamente y registrada como PENDIENTE.
-        reservation_id:
-          type: integer
-          description: ID único de la reserva recién creada.
-          example: 1234
-        status:
-          type: string
-          enum: [RESERVED]
-          description: Estado inicial de la reserva.
-          example: RESERVED
-          
-    ErrorResponse:
-      type: object
-      properties:
+          description: Lo que el backend indica al frontend que debe mostrar
+          example: "Reserva creada exitosamente"
+        data:
+          description: La información, puede ser un arreglo
+          oneOf:
+            - type: object
+            - type: array
+            - type: integer
+            - type: string
+          example: {}
         error:
           type: string
-          description: Descripción del error.
-          example: No autorizado o El evento ya está reservado en esa fecha.
+          description: Es vacío si no hay ningún error
+          example: ""
+        traceback:
+          type: string
+          description: Todo el error generado en el backend si la respuesta es código 500
+          example: ""
 
 security:
   - bearerAuth: []
 
 paths:
-  /api/client/reservations:
+  /api/client/reservations/create:
     post:
       tags:
         - Reserva Evento (Cliente)
@@ -83,8 +83,23 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReservationCreateResponse'
+                $ref: '#/components/schemas/StandardResponse'
+              example:
+                message: "Reserva creada exitosamente"
+                data:
+                  reservation_id: 1234
+                  status: "RESERVED"
+                error: ""
+                traceback: ""
         '400':
           description: Datos de entrada inválidos (ej. fecha no disponible, ID de variante no existe, monto negativo).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StandardResponse'
         '401':
           description: No autorizado (JWT inválido o ausente).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StandardResponse'
